# Cmake_git_info

./: CMakeLists.txt  main.cc
git_version_tracking/: CMakeLists.txt  git.c.in  git.h  git_watcher.cmake
